--- a/index.html.haml
+++ b/index.html.haml
@@ -1,8 +1,6 @@
 ---
 layout: project
-title: Example Homepage
-nav_partial: empty.html.haml
-projectfooter_partial: empty.html.haml
+title: Narayana Homepage
 ---
 
 %br
