--- a/_partials/banner.html.haml
+++ b/_partials/banner.html.haml
@@ -1,3 +1,3 @@
 .banner
   %a(href="#")<
-  .taglinelight.visible-lg This text is for the project tagline.
+  .taglinelight.visible-lg Narayana Tag Line (TODO)
