--- a/_partials/nav.html.haml
+++ b/_partials/nav.html.haml
@@ -13,63 +13,17 @@
           %a(href="#{site.base_url}/downloads.html") Downloads
         %li{:class=>"#{'active' if page.output_path.start_with?('/docs') }" }<
           %a(href="#{site.base_url}/docs.html") Docs
+        %li{:class=>"#{'active' if page.output_path.start_with?('/community') }" }<
+          %a(href="#{site.base_url}/community.html") Community
         %li.dropdown
           %a.dropdown-toggle(href="#" data-toggle="dropdown")<
-            = precede 'Community ' do
+            = precede 'Source Code ' do
               %b.caret>
           %ul.dropdown-menu
             %li<
-              %a(href="#") Overview
+              %a(href="https://github.com/jbosstm") GitHub
             %li<
-              %a(href="#") Wiki
-            %li<
-              %a(href="#") User Forum
-            %li<
-              %a(href="#") Mailing Lists
-            %li<
-              %a(href="#") Chat
-            %li<
-              %a(href="#") Blog
-        %li{:class=>"#{'active' if page.output_path.start_with?('/issues') }" }<
-          %a(href="#{site.base_url}/issues.html") Issues
-        %li{:class=>"#{'active' if page.output_path.start_with?('/source') }" }<
-          %a(href="#{site.base_url}/source.html") Source Code
-        %li{:class=>"#{'active' if page.output_path.start_with?('/build') }" }<
-          %a(href="#{site.base_url}/build.html") Build
-        %li.dropdown
-          %a.dropdown-toggle(href="#" data-toggle="dropdown")<
-            = precede 'Follow Us ' do
-              %b.caret>
-          %ul.dropdown-menu.projectsocialmedia
-            %li<
-              %a(href="#")<
-                %img(src="#{site.jborg_images_url}/common/socialmedia_icon40_twitter.png")
-            %li<
-              %a(href="#")<
-                %img(src="#{site.jborg_images_url}/common/socialmedia_icon40_googleplus.png")
-            %li<
-              %a(href="#")<
-                %img(src="#{site.jborg_images_url}/common/socialmedia_icon40_facebook.png")
-            %li<
-              %a(href="#")<
-                %img(src="#{site.jborg_images_url}/common/socialmedia_icon40_youtube.png")
-            %li<
-              %a(href="#")<
-                %img(src="#{site.jborg_images_url}/common/socialmedia_icon40_linkedin.png")
-        %li.dropdown
-          %a.dropdown-toggle(href="#" data-toggle="dropdown")<
-            = precede 'Layouts ' do
-              %b.caret>
-          %ul.dropdown-menu
-            %li<
-              %a(href="#{site.base_url}/rightcol.html") Right Column
-            %li<
-              %a(href="#{site.base_url}/leftcol.html") Left Column
-            %li<
-              %a(href="#{site.base_url}/bothcol.html") 3 Columns
-        %li.divider
-
-      %form.navbar-form.navbar-right
-        %input.form-control(type="text" placeholder="Search")
-
+              %a(href="https://source.jboss.org/browse/narayana") FishEye
+        %li<
+          %a(href="https://issues.jboss.org/browse/JBTM") Issue Tracker
 = breadcrumb(page.real_page.output_path)
