--- a/_partials/latest-news.html.haml
+++ b/_partials/latest-news.html.haml
@@ -13,7 +13,7 @@
       google.load("feeds", "1");
 
       function initialize() {
-        var feed = new google.feeds.Feed("http://feeds.feedburner.com/Infinispan?format=xml");
+        var feed = new google.feeds.Feed("http://jbossts.blogspot.com/feeds/posts/default");
         feed.setNumEntries(4);
         feed.load(function(result) {
           if (!result.error) {
