Main documentation page

--- a/_partials/rightcol-documentation.html.haml
+++ b/_partials/rightcol-documentation.html.haml
@@ -49,3 +49,6 @@
       %a{:href => "#"}
         %i.icon-fixed-width.icon-arrow-right
         Web Services Support
+    %li
+      %a{:href => "#"}
+        General Reading List
