--- a/_partials/rightcol-documentation.html.haml
+++ b/_partials/rightcol-documentation.html.haml
@@ -1,8 +1,8 @@
 .div
   %h2 Other Resources
   %ul.nav.nav-pills.nav-stacked
-    %li
-      %a{:href => ""}
+    %li{:class => "#{'active' if page.real_page.output_path.start_with?('/documentation/architecture')}"}
+      %a{:href => "/documentation/architecture"}
         %i.icon-fixed-width.icon-arrow-right
         Architecture Documents
     %li
