--- a/_partials/rightcol-documentation.html.haml
+++ b/_partials/rightcol-documentation.html.haml
@@ -5,8 +5,8 @@
       %a{:href => "/documentation/architecture"}
         %i.icon-fixed-width.icon-arrow-right
         Architecture Documents
-    %li
-      %a{:href => "#"}
+    %li{:class => "#{'active' if page.real_page.output_path.start_with?('/documentation/arjuna-core')}"}
+      %a{:href => "/documentation/arjuna-core"}
         %i.icon-fixed-width.icon-arrow-right
         Arjuna Core
     %li
