--- a/_partials/nav.html.haml
+++ b/_partials/nav.html.haml
@@ -9,15 +9,8 @@
       %ul.nav.navbar-nav
         %li{:class=>"#{'active' if page.output_path.eql?('') }" }<
           %a(href="/") Home
-        %li.dropdown
-          %a.dropdown-toggle(href="#" data-toggle="dropdown")<
-            = precede 'Downloads ' do
-              %b.caret>
-          %ul.dropdown-menu
-            %li<
-              %a(href="/download-narayana") Narayana
-            %li<
-              %a(href="/download-nta") NTA
+        %li{:class=>"#{'active' if page.real_page.output_path.start_with?('/downloads')}"}<
+          %a(href="/downloads") Downloads
         %li{:class=>"#{'active' if page.output_path.start_with?('/documentation') }" }<
           %a(href="/documentation") Documentation
         %li{:class=>"#{'active' if page.output_path.start_with?('/community') }" }<
