--- a/_partials/rightcol.html.haml
+++ b/_partials/rightcol.html.haml
@@ -1,113 +1,52 @@
 .div
-  %h2 Quickstarts
-  %ul.nav.nav-pills.nav-stacked
-    %li.active
-      %a{:href => "#"}
-        %i.icon-fixed-width.icon-download
-        Download
-    %li
-      %a{:href => "#"}
-        %i.icon-fixed-width.icon-dashboard
-        Features
-    %li
-      %a{:href => "#"}
-        %i.icon-fixed-width.icon-group
-        Project Team
-    %li
-      %a{:href => "#"}
-        %i.icon-fixed-width.icon-envelope-alt
-        Mailing Lists
-    %li
-      %a{:href => "#"}
-        %i.icon-fixed-width.icon-edit
-        Wiki
-    %li
-      %a{:href => "#"}
-        %i.icon-fixed-width.icon-sitemap
-        Source Overview
-    %li
-      %a{:href => "#"}
-        %i.icon-fixed-width.icon-road
-        Building the Project
-%br
-
+  %h2 Compliance 
 .well
   #badges
-    %ul
-      %li.license-asl
-        %a{:href => "http://www.apache.org/licenses/LICENSE-2.0"}
-          %em Apache License, Version 2.0
+    %ul{:style=>'list-style-type: none'}
+      / Filler to center
+      %li.pull-left
+        %div{:style=>'width: 5px;height: 5px;'}
+      %li.license-lgpl
+        %a{:href => "http://www.gnu.org/licenses/lgpl-2.1.html"}
+          %em GNU Lesser General Public License, Version 2.1
       %li.jsr
-        %a{:href => "http://jcp.org/en/jsr/detail?id=34"}
+        %a{:href => "http://jcp.org/en/jsr/detail?id=342"}
           %span.implements JSR
-          %span.version 34
-      %li.tools
-        %a{:href => "http://www.jboss.org/tools"} Supported by Tools
-      %li.jopr
-        %a{:href => "http://www.jboss.org/jopr"} Managed by RHQ
+          %br
+          %span.version 907
       %li.arquillian
         %a{:href => "http://www.jboss.org/arquillian"} Tested with Arquillian
     %div{:style => "clear: both; height:1px;"}
 
-.div
-  %h3 Supported In:
-  %ul.supportedin
-    %li
-      %i.icon-fixed-width.icon-plus
-      %a{:href => "#"}
-        Application Platform
-    %li
-      %i.icon-fixed-width.icon-plus
-      %a{:href => "#"}
-        Communications Platform
-    %li
-      %i.icon-fixed-width.icon-plus
-      %a{:href => "#"}
-        Portal Platform
-    %li
-      %i.icon-fixed-width.icon-plus
-      %a{:href => "#"}
-        JBoss Hibernate
-
-
 %div#coolstuff
-  %p.text-center
-    %a{:href => "/coolstuff/desktopwallpapers/project"}> Desktop Wallpaper
+  %p{:style => "margin-top: 2px; margin-bottom: 15px; margin-right: 10px; text-align: right;"}
+    %a{:href => "http://design.jboss.org/coolstuff/wallpaper-narayana.html"}> Desktop Wallpaper
     &nbsp;|&nbsp;
-    %a{:href => "#"} Project Swag
-  %a{:href => "/coolstuff/desktopwallpapers/project"}
-    %img.img-responsive.center-block{:alt => "Cool Stuff", :height => "110", :src => "http://static.jboss.org/images/infinispan/project_coolstuff_infinispan.png"}/
+    %a{:href => "http://www.cafepress.com/jbossorg/7793745"} Project Swag
+  %a{:href => "http://design.jboss.org/coolstuff/wallpaper-narayana.html"}
+    %img{:alt => "Cool Stuff", :height => "110", :src => "/images/cool-stuff.png", :style => "margin:0 auto;", :width => "225", :class => "img-responsive"}/
 
 
 .well.sponsors
   %h3 Sponsors
   %ul
     %li
+      %a{:href => "http://www.redhat.com"}
+        %img{:alt => "Red Hat", :src=>"http://static.jboss.org/theme/images/common/redhat_logo.png"}/
+      %p Red Hat employs the majority of contributors and provides all project infrastructure.
+    %li
       %a{:href => "http://www.ej-technologies.com/"}
-        %img.img-responsive.center-block{:alt => "EJ-Technologies", :src => "http://static.jboss.org/common/images/sponsors/ejtechnologies-color.png"}/
+        %img{:alt => "EJ-Technologies", :src => "http://static.jboss.org/common/images/sponsors/ejtechnologies-color.png", :class => "img-responsive"}/
       %p EJ-Technologies has kindly provided free JProfiler licenses.
-    %li
-      %a{:href => "http://www.nexb.com/"}
-        %img.img-responsive.center-block{:alt => "NexB", :src => "http://static.jboss.org/common/images/sponsors/nexb-color.png"}/
-      %p nexB is our preferred Eclipse development partner.
-    %li
+    %li{:style => "border: none;"}
       %a{:href => "http://www.jetbrains.com/"}
-        %img.img-responsive.center-block{:alt => "JetBrians", :src => "http://static.jboss.org/common/images/sponsors/intellij-color.png"}/
+        %img{:alt => "JetBrains", :src => "http://static.jboss.org/common/images/sponsors/intellij-color.png", :class => "img-responsive"}/
       %p JetBrains has kindly donated an open source IntelliJ license.
-    %li
-      %a{:href => "http://www.headwaysoftware.com/products/structure101/index.php"}
-        %img.img-responsive.center-block{:alt => "Structure 101", :src => "http://static.jboss.org/common/images/sponsors/structure101-color.png"}/
-      %p Structure 101 helps us to understand our project structure.
-    %li
-      %a{:href => "http://www.magicdraw.com/"}
-        %img.img-responsive.center-block{:alt => "MagicDraw", :src => "http://static.jboss.org/common/images/sponsors/magicdraw-color.png"}/
-      %p A Special thanks to MagicDraw for supporting the project.
-
-
-%div
-  %a{:href => "http://www.jboss.org/security.html"}/
-  .projectpage-sprite.projectpage-sprite-securityimage
+    %li{:style => "border: none;"}
+      %a{:href => "http://www.oxygenxml.com/"}
+        %img{:alt => "Oxygen", :src => "/images/oxygen.png", :class => "img-responsive"}/
+      %p JetBrains has kindly donated an open source IntelliJ license.
 
 %div
   %a{:href => "http://www.jboss.org/security.html"}
-    %img.img-responsive.center-block{:alt => "Find a security issue with a JBoss Project or Product? Report it now", :height => "110", :src => "http://static.jboss.org/common/images/securityissue.png"}/
+    %img{:alt => "Find a security issue with a JBoss Project or Product? Report it now", :height => "110", :src => "http://static.jboss.org/common/images/securityissue.png", :class => "img-responsive"}/
