Project swag links aligned

--- a/_partials/rightcol.html.haml
+++ b/_partials/rightcol.html.haml
@@ -19,10 +19,12 @@
     %div{:style => "clear: both; height:1px;"}
 
 %div#coolstuff
-  %p{:style => "margin-top: 2px; margin-bottom: 15px; margin-right: 10px; text-align: right;"}
-    %a{:href => "http://design.jboss.org/coolstuff/wallpaper-narayana.html"}> Desktop Wallpaper
+  %div{:style => "margin-top: 2px; margin-bottom: 15px; margin-right: 10px; text-align: center;"}
+    %div{:style => "display: inline-block"}
+      %a{:href => "http://design.jboss.org/coolstuff/wallpaper-narayana.html"}> Desktop Wallpaper
     &nbsp;|&nbsp;
-    %a{:href => "http://www.cafepress.com/jbossorg/7793745"} Project Swag
+    %div{:style => "display: inline-block"}
+      %a{:href => "http://www.cafepress.com/jbossorg/7793745"} Project Swag
   %a{:href => "http://design.jboss.org/coolstuff/wallpaper-narayana.html"}
     %img{:alt => "Cool Stuff", :height => "110", :src => "/images/cool-stuff.png", :style => "margin:0 auto;", :width => "225", :class => "img-responsive"}/
 
