Rename "Architecture Documents" to "Atchitecture"

--- a/_partials/rightcol-documentation.html.haml
+++ b/_partials/rightcol-documentation.html.haml
@@ -8,7 +8,7 @@
     %li{:class => "#{'active' if page.real_page.output_path.start_with?('/documentation/architecture')}"}
       %a{:href => "/documentation/architecture"}
         %i.icon-fixed-width.icon-arrow-right
-        Architecture Documents
+        Architecture
     %li{:class => "#{'active' if page.real_page.output_path.start_with?('/documentation/arjuna-core')}"}
       %a{:href => "/documentation/arjuna-core"}
         %i.icon-fixed-width.icon-arrow-right
