Other narayana downloads

--- a/downloads/index.html.haml
+++ b/downloads/index.html.haml
@@ -27,6 +27,9 @@ title: Downloads
       %td #{site.links.narayana.date}
       %td LGPL
 
+%a{:href => "/downloads/narayana-other"}
+  Other Narayana versions
+
 %h2 Latest BlackTie Release
 %table.table.table-bordered.table-striped.white-stripes
   %thead
