Other nta and blacktie versions

--- a/downloads/index.html.haml
+++ b/downloads/index.html.haml
@@ -55,6 +55,9 @@ title: Downloads
       %td #{site.links.blacktie.date}
       %td LGPL
 
+%a{:href => "/downloads/blacktie-other"}
+  Other BlackTie versions
+
 %h2 Latest NTA Release
 %table.table.table-bordered.table-striped.white-stripes
   %thead
@@ -79,3 +82,5 @@ title: Downloads
       %td #{site.links.nta.version}
       %td #{site.links.nta.date}
       %td LGPL
+%a{:href => "/downloads/nta-other"}
+  Other NTA versions
