--- a/documentation/index.html.haml
+++ b/documentation/index.html.haml
@@ -19,7 +19,7 @@ description: List of Narayana documents available for download
           here
       %p
         Or try out our quickstarts on
-        %a{:href=>"#"}
+        %a{:href=>"https://github.com/jbosstm/quickstart"}
           %i.icon-github
           GitHub
 
