--- a/_partials/projectfooter.html.haml
+++ b/_partials/projectfooter.html.haml
@@ -4,33 +4,35 @@
       %h4 Navigate
       %ul.list-unstyled
         %li
-          %a{:href => "#", :title => "Learn"} Learn
+          %a{:href => "/documentation", :title => "Learn"} Learn
         %li
-          %a{:href => "#", :title => "Get Started"} Get Started
+          %a{:href => "https://github.com/jbosstm/quickstart", :title => "Get Started"} Get Started
         %li
-          %a{:href => "#", :title => "Forums"} Forums
+          %a{:href => "https://developer.jboss.org/en/jbosstm/?view=discussions", :title => "Forums"} Forums
         %li
-          %a{:href => "#", :title => "Get Involved"} Get Involved
-        %li
-          %a{:href => "#", :title => "Download"} Download
+          %a{:href => "/downloads", :title => "Download"} Download
     .col-md-2
       %h4 Follow Us
       %ul.list-unstyled
         %li
-          %a{:href => "#", :title => "Blog"} Blog
+          %a{:href => "http://jbossts.blogspot.co.uk/", :title => "Blog"} Blog
         %li
-          %a{:href => "#", :title => "Twitter"} Twitter
+          %a{:href => "https://lists.jboss.org/mailman/listinfo/jbossts-announce", :title => "Announce Mailing List"} Announce Mailing List
         %li
-          %a{:href => "#", :title => "Google+"} Google+
+          %a{:href => "https://lists.jboss.org/mailman/listinfo/jbossts-users", :title => "Users Mailing List"} Users Mailing List
+        %li
+          %a{:href => "https://lists.jboss.org/mailman/listinfo/jbossts-commits", :title => "Commits Mailing List"} Commits Mailing List
+        %li
+          %a{:href => "https://lists.jboss.org/mailman/listinfo/jbossts-dev", :title => "Developers Mailing List"} Developers Mailing List
+        %li
+          %a{:href => "https://lists.jboss.org/mailman/listinfo/jbossts-issues", :title => "Issues Mailing List"} Issues Mailing List
     .col-md-2
       %h4 Contribute
       %ul.list-unstyled
         %li
-          %a{:href => "#", :title => "Submit a bug"} Submit a bug
+          %a{:href => "https://issues.jboss.org/browse/JBTM/", :title => "Submit a bug"} Submit a bug
         %li
-          %a{:href => "#", :title => "Write code"} Write Code
-        %li
-          %a{:href => "#", :title => "Join the team"} Join the team
+          %a{:href => "https://github.com/jbosstm", :title => "Write code"} Write Code
     .col-md-3.col-md-offset-1
       %h4 LGPL 2.1 License
       %p All dependencies of this project are available under the LGPL or a compatible license.
