--- a/_partials/head.html.haml
+++ b/_partials/head.html.haml
@@ -17,8 +17,7 @@
   %script(src="#{site.jborg_js_url}/libs/html5/pre3.6/html5.min.js")
 
 / Defines the project favicon. Change these URLs to your specific project folder on static.jboss.org.
-/ TODO
-%link(rel="shortcut icon" href="#{site.project_images_url}/favicon.ico")
+%link(rel="icon" href="/images/favicon.png" type="image/png")
 %link(rel="apple-touch-icon-precomposed" sizes="144x144" href="#{site.project_images_url}/apple-touch-icon-144x144-precomposed.png")
 %link(rel="apple-touch-icon-precomposed" sizes="114x114" href="#{site.project_images_url}/apple-touch-icon-114x114-precomposed.png")
 %link(rel="apple-touch-icon-precomposed" sizes="72x72" href="#{site.project_images_url}/apple-touch-icon-72x72-precomposed.png")
