Updated to say that the versions are previous or legacy in the case of 4.17.

--- a/downloads/blacktie-other.html.haml
+++ b/downloads/blacktie-other.html.haml
@@ -1,8 +1,8 @@
 ---
 layout: rightcol
-title: Other BlackTie Versions
+title: Previous BlackTie Versions
 ---
-%h2 Other BlackTie Versions
+%h2 Previous BlackTie Versions
 %table.table.table-bordered.table-striped.white-stripes
   %thead
     %th Version
