--- a/downloads/index.html.haml
+++ b/downloads/index.html.haml
@@ -28,7 +28,7 @@ title: Downloads
       %td LGPL
 
 %a{:href => "/downloads/narayana-other"}
-  Other Narayana versions
+  Legacy Narayana versions
 
 %h2 Latest BlackTie Release
 %table.table.table-bordered.table-striped.white-stripes
@@ -56,7 +56,7 @@ title: Downloads
       %td LGPL
 
 %a{:href => "/downloads/blacktie-other"}
-  Other BlackTie versions
+  Previous BlackTie versions
 
 %h2 Latest NTA Release
 %table.table.table-bordered.table-striped.white-stripes
@@ -83,4 +83,4 @@ title: Downloads
       %td #{site.links.nta.date}
       %td LGPL
 %a{:href => "/downloads/nta-other"}
-  Other NTA versions
+  Previous NTA versions
