--- a/downloads/narayana-other.html.haml
+++ b/downloads/narayana-other.html.haml
@@ -1,8 +1,8 @@
 ---
 layout: rightcol
-title: Other Narayana Versions
+title: Legacy Narayana Versions
 ---
-%h2 Other Narayana Versions
+%h2 Legacy Narayana Versions
 %table.table.table-bordered.table-striped.white-stripes
   %thead
     %th Version
