--- a/downloads/nta-other.html.haml
+++ b/downloads/nta-other.html.haml
@@ -1,8 +1,8 @@
 ---
 layout: rightcol
-title: Other NTA Versions
+title: Previous NTA Versions
 ---
-%h2 Other NTA Versions
+%h2 Previous NTA Versions
 %table.table.table-bordered.table-striped.white-stripes
   %thead
     %th Version
