Created different configs for different releases

--- a/documentation/index.html.haml
+++ b/documentation/index.html.haml
@@ -10,11 +10,11 @@ description: List of Narayana documents available for download
       %h1 Learn to use Narayana
       %p
         Get our latest open source project documentation
-        %a{:href=>site.links.docs.project}
+        %a{:href=>site.current_narayana_docs.project}
           %i.icon-external-link
           here
         and documentation of our supported product
-        %a{:href=>site.links.docs.product}
+        %a{:href=>site.current_narayana_docs.product}
           %i.icon-external-link
           here
       %p
