--- a/downloads/blacktie-other.html.haml
+++ b/downloads/blacktie-other.html.haml
@@ -10,7 +10,7 @@ title: Previous BlackTie Versions
     %th License
     %th
   %tbody
-    - for release in site.links[:"blacktie-other"]
+    - for release in site.other_releases[:"blacktie-other"]
       %tr
         %td #{release.version}
         %td #{release.date}
