--- a/downloads/index.html.haml
+++ b/downloads/index.html.haml
@@ -12,19 +12,19 @@ title: Downloads
   %tbody
     %tr
       %td
-        %a{:href => site.links.narayana.binary}
+        %a{:href => site.current_narayana_release.binary}
           %i.icon-download-alt
           Narayana Binary
-      %td #{site.links.narayana.version}
-      %td #{site.links.narayana.date}
+      %td #{site.current_narayana_release.version}
+      %td #{site.current_narayana_release.date}
       %td LGPL
     %tr
       %td
-        %a{:href => site.links.narayana.source}
+        %a{:href => site.current_narayana_release.source}
           %i.icon-download-alt
           Narayana Source Code
-      %td #{site.links.narayana.version}
-      %td #{site.links.narayana.date}
+      %td #{site.current_narayana_release.version}
+      %td #{site.current_narayana_release.date}
       %td LGPL
 
 %a{:href => "/downloads/narayana-other"}
@@ -40,19 +40,19 @@ title: Downloads
   %tbody
     %tr
       %td
-        %a{:href => site.links.blacktie.linux}
+        %a{:href => site.other_releases.blacktie.linux}
           %i.icon-download-alt
           BlackTie Linux x64 Binary
-      %td #{site.links.blacktie.version}
-      %td #{site.links.blacktie.date}
+      %td #{site.other_releases.blacktie.version}
+      %td #{site.other_releases.blacktie.date}
       %td LGPL
     %tr
       %td
-        %a{:href => site.links.blacktie.windows}
+        %a{:href => site.other_releases.blacktie.windows}
           %i.icon-download-alt
           BlackTie Windows Binary
-      %td #{site.links.blacktie.version}
-      %td #{site.links.blacktie.date}
+      %td #{site.other_releases.blacktie.version}
+      %td #{site.other_releases.blacktie.date}
       %td LGPL
 
 %a{:href => "/downloads/blacktie-other"}
@@ -68,19 +68,19 @@ title: Downloads
   %tbody
     %tr
       %td
-        %a{:href => site.links.nta.binary}
+        %a{:href => site.other_releases.nta.binary}
           %i.icon-download-alt
           NTA Binary
-      %td #{site.links.nta.version}
-      %td #{site.links.nta.date}
+      %td #{site.other_releases.nta.version}
+      %td #{site.other_releases.nta.date}
       %td LGPL
     %tr
       %td
-        %a{:href => site.links.nta.demo}
+        %a{:href => site.other_releases.nta.demo}
           %i.icon-download-alt
           NTA Demo
-      %td #{site.links.nta.version}
-      %td #{site.links.nta.date}
+      %td #{site.other_releases.nta.version}
+      %td #{site.other_releases.nta.date}
       %td LGPL
 %a{:href => "/downloads/nta-other"}
   Previous NTA versions
