--- a/downloads/narayana-other.html.haml
+++ b/downloads/narayana-other.html.haml
@@ -10,7 +10,7 @@ title: Legacy Narayana Versions
     %th License
     %th
   %tbody
-    - for release in site.links[:"narayana-other"]
+    - for release in site.other_narayana_releases
       %tr
         %td #{release.version}
         %td #{release.date}
