Removed javadocs download link until they are available

--- a/documentation/index.html.haml
+++ b/documentation/index.html.haml
@@ -26,11 +26,11 @@ description: List of Narayana documents available for download
         Our Javadocs are available to view
         %a{:href=>site.current_narayana_api.view}
           %i.icon-external-link
-          online
-        or to
-        %a{:href=>site.current_narayana_api.download}
-          %i.icon-download-alt
-          download.
+          online.
+/        or to
+/        %a{:href=>site.current_narayana_api.download}
+/          %i.icon-download-alt
+/          download.
 
 .row
   .col-md-6
