Updated documentation links

--- a/documentation/index.html.haml
+++ b/documentation/index.html.haml
@@ -9,28 +9,21 @@ description: List of Narayana documents available for download
     .well
       %h1 Learn to use Narayana
       %p
-        Get our latest open source project documentation
         %a{:href=>site.current_narayana_docs.project}
           %i.icon-external-link
-          here
-        and documentation of our supported product
+          Narayana Guide (Community-only features)
+      %p
         %a{:href=>site.current_narayana_docs.product}
           %i.icon-external-link
-          here.
+          Narayana Guide (EAP product related features)
       %p
-        Or try out our quickstarts on
         %a{:href=>"https://github.com/jbosstm/quickstart"}
           %i.icon-github
-          GitHub.
+            Narayana Quickstarts
       %p
-        Our Javadocs are available to view
         %a{:href=>site.current_narayana_api.view}
           %i.icon-external-link
-          online.
-/        or to
-/        %a{:href=>site.current_narayana_api.download}
-/          %i.icon-download-alt
-/          download.
+          Narayana Javadocs
 
 .row
   .col-md-6
