--- a/index.html.haml
+++ b/index.html.haml
@@ -5,12 +5,12 @@ title: Narayana Homepage
 
 .row
   .col-md-12
-    .well
-      %h1 Welcome to the Narayana community!
-      %p
-        With over 20 years of expertise in the area of transaction processing, Narayana is the premier open source
-        transaction manager. It has been used extensively within industry and to drive standards including the OMG
-        and Web Services.
+    %h1 Welcome to the Narayana community!
+    %p
+      With over 20 years of expertise in the area of transaction processing, Narayana is the premier open source transaction manager. It has been used extensively within industry and to drive standards including the OMG and Web Services.
+
+%br
+
 .row
   = partial( 'latest-news.html.haml', {"real_page" => page} )
   = partial( 'forum-posts.html.haml', {"real_page" => page} )
