--- a/index.html.haml
+++ b/index.html.haml
@@ -1,5 +1,5 @@
 ---
-layout: project
+layout: rightcol
 title: Narayana Homepage
 ---
 
@@ -10,10 +10,6 @@ title: Narayana Homepage
       With over 20 years of expertise in the area of transaction processing, Narayana is the premier open source transaction manager. It has been used extensively within industry and to drive standards including the OMG and Web Services.
 
 %br
-
-.row
-  = partial( 'latest-news.html.haml', {"real_page" => page} )
-  = partial( 'forum-posts.html.haml', {"real_page" => page} )
 
 .row
   .col-md-12
@@ -67,3 +63,8 @@ title: Narayana Homepage
             Professional Support
           %td.def
             Red Hat delivers the Professional Support, Consulting, and Training that you need whether you are testing a proof of concept, deploying a mission-critical application, or rolling out across your entire enterprise.
+
+.row
+  = partial( 'latest-news.html.haml', {"real_page" => page} )
+  = partial( 'forum-posts.html.haml', {"real_page" => page} )
+			
