--- a/_partials/latest-news.html.haml
+++ b/_partials/latest-news.html.haml
@@ -8,7 +8,7 @@
     %a{:href => "http://jbossts.blogspot.com"} More news
 
     %script{ :type => 'text/javascript', :src => 'https://www.google.com/jsapi'}
-    -# Uses Google Feed API to load blog.infinispan.org feed and replace the DOM elements
+    -# Uses Google Feed API to load http://jbossts.blogspot.co.uk/ feed and replace the DOM elements
     :javascript
       google.load("feeds", "1");
 
