Added in some right column navigation and an announcement element

--- a/_partials/rightcol.html.haml
+++ b/_partials/rightcol.html.haml
@@ -1,4 +1,32 @@
 .div
+  %h2 Getting Started
+  %ul.nav.nav-pills.nav-stacked
+    %li
+      %a{:href => href="http://www.jboss.org:80/narayana/downloads/latest.html"}
+        %i.icon-fixed-width.icon-arrow-right
+        Download the latest version of Narayana standalone
+    %li
+      %a{:href => href="https://ci.jboss.org/hudson/job/WildFly-latest-master/"}
+        %i.icon-fixed-width.icon-arrow-right
+        Or download the latest version of Narayana + WildFly
+    %li
+      %a{:href => href="http://www.jboss.org:80/narayana/documentation/latest.html"}
+        %i.icon-fixed-width.icon-arrow-right
+        Read our getting started documentation
+    %li
+      %a{:href => href="http://github.com/jbosstm/quickstart"}
+        %i.icon-fixed-width.icon-arrow-right
+        Run our quickstarts
+    %li
+      %a{:href => href="http://www.jboss.org:80/narayana/team.html"}
+        %i.icon-fixed-width.icon-arrow-right
+        Meet the team
+    %li
+      %a{:href => href="https://community.jboss.org/wiki/GetInvolvedWithNarayana"}
+        %i.icon-fixed-width.icon-arrow-right
+        Get involved!
+
+.div
   %h2 Compliance 
 .well
   #badges
