--- a/index.html.haml
+++ b/index.html.haml
@@ -3,6 +3,14 @@ layout: rightcol
 title: Narayana Homepage
 ---
 
+.well.announcement
+  %h3 Announcement: Narayana #{site.current_narayana_release.version} Released!
+  %p
+    Great news! Today we released the latest version of our transaction software!
+  %p
+    Download it now from:
+    %a{ :href=>"/downloads" } #{site.base_url}/downloads
+
 .row
   .col-md-12
     %h1 Welcome to the Narayana community!
