--- a/_partials/head.html.haml
+++ b/_partials/head.html.haml
@@ -7,6 +7,7 @@
 - pageStyle = page.style ;
 
 %link(href="#{pageStyle ? site[pageStyle].bootstrap_css_url : site.bootstrap_css_url}#{site.minified}.css" rel="stylesheet" media="screen")
+%link(href="css/styles.css" rel="stylesheet" media="screen")
 
 
 / IE 6-8 support of HTML 5 elements
