added an icon for the announcement

--- a/index.html.haml
+++ b/index.html.haml
@@ -4,12 +4,14 @@ title: Narayana Homepage
 ---
 
 .well.announcement
-  %h4 Announcement: Narayana #{site.current_narayana_release.version} Released!
-  %p
-    Great news! Today we released the latest version of our transaction software!
-  %p
-    Download it now from:
-    %a{ :href=>"/downloads" } #{site.base_url}/downloads
+  %ul{:style=>'list-style-image:url(https://static.jboss.org/theme/images/common/jive-icon-announcement-16x16.gif)'}
+    %li
+      %h4 Announcement: Narayana #{site.current_narayana_release.version} Released!
+      %p
+        Great news! Today we released the latest version of our transaction software!
+      %p
+        Download it now from:
+        %a{ :href=>"/downloads" } #{site.base_url}/downloads
 
 .row
   .col-md-12
