moved the dynamic content to the right side

--- a/_partials/rightcol.html.haml
+++ b/_partials/rightcol.html.haml
@@ -26,6 +26,35 @@
         %i.icon-fixed-width.icon-arrow-right
         Get involved!
 
+
+.span4
+  %section
+    %h4 Latest forum discussions
+    #forumDiv
+    :javascript
+      $(document).ready(function () {
+        $('#forumDiv').FeedEk({
+          FeedUrl: 'https://developer.jboss.org/view-browse-feed.jspa?containerType=14&userID=5690&browseSite=place-content&filterID=contentstatus%5Bpublished%5D~objecttype~objecttype%5Bthread%5D&browseViewID=placeContent&containerID=2040',
+          MaxCount: 2,
+          ShowDesc: false,
+          CharacterLimit: 200
+        });
+      });
+ 
+.span4
+  %section
+    %h4 Latest news
+    #blogDiv
+    :javascript
+      $(document).ready(function () {
+        $('#blogDiv').FeedEk({
+          FeedUrl: 'http://jbossts.blogspot.com/feeds/posts/default',
+          MaxCount: 2,
+          ShowDesc: false,
+          CharacterLimit: 200
+        });
+      });
+
 .div
   %h2 Compliance 
 .well
