--- a/index.html.haml
+++ b/index.html.haml
@@ -95,6 +95,6 @@ title: Narayana Homepage
       
       %img{:src => "/images/narayana-architecture-diagram.jpg", :class => "img-responsive"}
 
-.row
-  = partial( 'latest-news.html.haml', {"real_page" => page} )
-  = partial( 'forum-posts.html.haml', {"real_page" => page} )
+-# .row
+-#   = partial( 'latest-news.html.haml', {"real_page" => page} )
+-#   = partial( 'forum-posts.html.haml', {"real_page" => page} )
