Added a date to the announcement

--- a/index.html.haml
+++ b/index.html.haml
@@ -12,6 +12,8 @@ title: Narayana Homepage
       %p
         Download it now from:
         %a{ :href=>"/downloads" } #{site.base_url}/downloads
+      %p{:style=>'font-size: 10px; font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;'}
+        by narayana at Mon Jun 02 10:00:40 EDT 2014
 
 .row
   .col-md-12
