--- a/index.html.haml
+++ b/index.html.haml
@@ -13,7 +13,7 @@ title: Narayana Homepage
         Download it now from:
         %a{ :href=>"/downloads" } #{site.base_url}/downloads
       %p{:style=>'font-size: 10px; font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;'}
-        by narayana at Mon Jun 02 10:00:40 EDT 2014
+        by narayana at #{site.current_narayana_release.date}
 
 .row
   .col-md-12
