Just edit the legacy versions in one place

--- a/downloads/narayana-other.html.haml
+++ b/downloads/narayana-other.html.haml
@@ -10,23 +10,22 @@ title: Legacy Narayana Versions
     %th License
     %th
   %tbody
-    - for release in site.other_narayana_releases
-      %tr
-        %td #{release.version}
-        %td #{release.date}
-        %td LGPL
-        %td
-          %a{:href => release.binary}
-            %i.icon-download-alt
-            Narayana #{release.version} Binary
+    %tr
+      %td 4.17.25.Final
+      %td 2014-11-28
+      %td LGPL
+      %td
+        %a{:href => "http://www.jboss.org/jbosstm/downloads/4.17.25.Final/binary/jbossts-full-4.17.25.Final.zip"}
+          %i.icon-download-alt
+          Narayana 4.17.25.Final Binary
       %tr
         %td
         %td 
         %td LGPL
         %td
-          %a{:href => release.source}
+          %a{:href => "http://www.jboss.org/jbosstm/downloads/4.17.25.Final/src/jbossts-full-4.17.25.Final-src.zip"}
             %i.icon-download-alt
-            Narayana #{release.version} Source Code
+            Narayana 4.17.25.Final Source Code
       %tr
         %td 4.16.6.Final
         %td 2012-10-02
