Added a link to the archive for announcements

--- a/community.html.haml
+++ b/community.html.haml
@@ -8,7 +8,7 @@ title: Community
     %h1
       Forum
     %p
-      Narayana user forum is the best place to ask any project related questions, give suggestoins, or request a new fieature.
+      Narayana user forum is the best place to ask any project related questions, give suggestions, or request a new feature.
     %a{:href => "https://developer.jboss.org/en/jbosstm/?view=discussions", :class => "btn btn-primary"}
       Visit Narayana Forum
   .col-md-4
@@ -41,21 +41,10 @@ title: Community
           %a{:href => "https://lists.jboss.org/mailman/listinfo/jbossts-announce"}
             %b jbossts-announce -
           Narayana project announcements.
-      %li
-        %p
-          %a{:href => "https://lists.jboss.org/mailman/listinfo/jbossts-users"}
-            %b jbossts-users -
-          where users can interact directly with each other and with the development team. This is not a substitute for the user forum, but is meant to work in parallel.
-      %li
-        %p
-          %a{:href => "https://lists.jboss.org/mailman/listinfo/jbossts-commits"}
-            %b jbossts-commits -
-          svn commit announcements will go here.
-      %li
-        %p
-          %a{:href => "https://lists.jboss.org/mailman/listinfo/jbossts-dev"}
-            %b jbossts-dev -
-          talk to the developers of JBossTS or others interested in developing on or with the transaction service. This is not a replacement for this forum: it is meant to compliment the forum.
+          %p
+            The archive is available at
+            %a{:href => "http://lists.jboss.org/pipermail/jbossts-announce/"}
+              http://lists.jboss.org/pipermail/jbossts-announce/
       %li
         %p
           %a{:href => "https://lists.jboss.org/mailman/listinfo/jbossts-issues"}
