Make a link to the freenode room from the community pages

--- a/community.html.haml
+++ b/community.html.haml
@@ -16,7 +16,8 @@ title: Community
       IRC
     %p
       If you would like to chat with our team in real time, just join us on
-      %code #jbossts
+      %a{:href => "http://webchat.freenode.net/?channels=#jbossts"}
+        %code #jbossts
       IRC channel on
       %a{:href => "http://freenode.net"}
         Freenode.
