--- a/_partials/projectfooter.html.haml
+++ b/_partials/projectfooter.html.haml
@@ -33,6 +33,8 @@
           %a{:href => "https://issues.jboss.org/browse/JBTM/", :title => "Submit a bug"} Submit a bug
         %li
           %a{:href => "https://github.com/jbosstm", :title => "Write code"} Write Code
+        %li
+          %a{:href => "/governance", :title => "Governance"} Governance
     .col-md-3.col-md-offset-1
       %h4 LGPL 2.1 License
       %p All dependencies of this project are available under the LGPL or a compatible license.
