Added a link to our wiki articles

--- a/documentation/index.html.haml
+++ b/documentation/index.html.haml
@@ -25,6 +25,14 @@ description: List of Narayana documents available for download
           %i.icon-external-link
           Narayana Javadocs
 
+      %h1 Wiki
+      %p
+        Our community users have also contributed a lot of useful content for various practical applications of the transaction manager that can act as a companion to the main documentation set. To access this, visit the articles section of the Narayana community space on jboss.org:
+        %a{:href => "https://developer.jboss.org/en/jbosstm/content?filterID=contentstatus%5Bpublished%5D~objecttype~objecttype%5Bdocument%5D"}
+          %i.icon-external-link
+          Visit Narayana Wiki
+
+
 .row
   .col-md-6
     %h2 Specifications
