put the blacktie links in the generated section so b-r-p.xml in NRP can update it

--- a/downloads/index.html.haml
+++ b/downloads/index.html.haml
@@ -28,19 +28,19 @@ title: Downloads
       %td LGPL
     %tr
       %td
-        %a{:href => site.other_releases.blacktie.linux}
+        %a{:href => site.current_narayana_release.blacktie.linux}
           %i.icon-download-alt
           BlackTie Linux x64 Binary
-      %td #{site.other_releases.blacktie.version}
-      %td #{site.other_releases.blacktie.date}
+      %td #{site.current_narayana_release.version}
+      %td #{site.current_narayana_release.date}
       %td LGPL
     %tr
       %td
-        %a{:href => site.other_releases.blacktie.windows}
+        %a{:href => site.current_narayana_release.blacktie.windows}
           %i.icon-download-alt
           BlackTie Windows Binary
-      %td #{site.other_releases.blacktie.version}
-      %td #{site.other_releases.blacktie.date}
+      %td #{site.current_narayana_release.version}
+      %td #{site.current_narayana_release.date}
       %td LGPL
 
 %a{:href => "/downloads/narayana-other"}
