[JBTM-2365] Narayana features comparison table

--- a/index.html.haml
+++ b/index.html.haml
@@ -6,6 +6,10 @@ title: Narayana Homepage
 .well.announcement
   %ul{:style=>'list-style-image:url(https://static.jboss.org/theme/images/common/jive-icon-announcement-16x16.gif)'}
     %li
+      %h4
+        Announcement: Narayana features page has been updated!
+        %a{:href => relative("/narayana-features/index.html")} Visit it here
+    %li
       %h4 Announcement: Narayana #{site.current_narayana_release.version} Released!
       %p
         Great news! Today we released the latest version of our transaction software!
