--- a/downloads/index.html.haml
+++ b/downloads/index.html.haml
@@ -71,3 +71,30 @@ title: Downloads
       %td #{site.other_releases.nta.version}
       %td #{site.other_releases.nta.date}
       %td LGPL
+
+%h2 Other related files
+.row
+  .col-md-6
+    %h3 Narayana JTS IDL Files
+    %ul.list-group
+      - for file in site.related_files.idl
+        %li.list-group-item
+          %a{:href=>"https://github.com/jbosstm/narayana/tree/" + site.current_narayana_release.version + "/" + file.path}
+            %i.icon-external-link
+            #{file.name}
+  .col-md-6
+    %h3 Narayana XTS WSDL and XSD Files
+    %ul.list-group
+      - for file in site.related_files.wsdl
+        %li.list-group-item
+          %a{:href=>"https://github.com/jbosstm/narayana/tree/" + site.current_narayana_release.version + "/" + file.path}
+            %i.icon-external-link
+            #{file.name}
+  .col-md-6
+    %h3 Blacktie Interfaces
+    %ul.list-group
+      - for file in site.related_files.blacktie
+        %li.list-group-item
+          %a{:href=>"https://github.com/jbosstm/narayana/tree/" + site.current_narayana_release.version + "/" + file.path}
+            %i.icon-external-link
+            #{file.name}
