--- a/_layouts/project.html.haml
+++ b/_layouts/project.html.haml
@@ -85,17 +85,6 @@
         </div>
         <!-- End oTags -->
 
-        <!-- Google Analytics part -->
-        <script type="text/javascript">
-        var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-        document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-        </script>
-        <script type="text/javascript">
-        try {
-        var pageTracker = _gat._getTracker("UA-10656779-1");
-        pageTracker._trackPageview();
-        } catch(err) {}</script>
-
+      <!-- Google Analytics -->
       - if site.profile.eql?("staging") or site.profile.eql?("production")
-        - if site.google_analytics
-          = google_analytics_async
+        %script{:src=>"js/analytics.js", :type=>"text/javascript"}
